List of owned rooms from myrooms is only printed if there are any. Added start of importantMsg command. Changed the way help prints out commands. Default for accessLevel 1 is to only print basic, unless the user sends "all" to help. Commands are also printed out based on group. Fixed it so that buttons no longer can be held down. Added styling for broadcasts to make them more visible

--- a/private/stylesheets/main.css
+++ b/private/stylesheets/main.css
@@ -107,6 +107,10 @@ pre {
     font-size: 2em;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 .feed {
     padding-left: .5em;
     padding-right: .5em;
